[gd_scene load_steps=13 format=2]

[ext_resource path="res://BLADRMF_.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Chill Cyberpunk Synthwave - Afterglow _ Royalty Free No Copyright Background Music.mp3" type="AudioStream" id=3]
[ext_resource path="res://menu_theme.tres" type="Theme" id=4]
[ext_resource path="res://background.tscn" type="PackedScene" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0.207843, 0.207843, 0.207843, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.207852, 0.69746, 1 )
colors = PoolColorArray( 1, 0, 1, 1, 1, 0.0222549, 0.977745, 1, 1, 0.979215, 0.0207852, 1, 1, 1, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

void vertex(){
	VERTEX.x += cos(TIME/5.0 + VERTEX.x + VERTEX.y)*10.0;
	VERTEX.y += sin(TIME/2.0 + VERTEX.x + VERTEX.y) * 5.0;
	
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("Viewport")

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 350, 350 )
size_override_stretch = true
transparent_bg = true
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true

[node name="Label" type="Label" parent="Viewport"]
material = SubResource( 1 )
margin_left = 50.8542
margin_top = 1.05946
margin_right = 304.854
margin_bottom = 132.059
custom_fonts/font = SubResource( 2 )
text = "bLdeSUrfer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Viewport"]
position = Vector2( 161.576, 17.5039 )
rotation = -1.5708
scale = Vector2( 0.0212867, 354.147 )
texture = SubResource( 4 )

[node name="Node2D" type="TextureRect" parent="."]
material = SubResource( 6 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 4.92, 5 )
texture = SubResource( 7 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 5 )]
rect_min_size = Vector2( 40, 597 )
rect_scale = Vector2( 36.4021, 1.1115 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Credits" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -84.0
margin_right = 416.0
rect_scale = Vector2( 0.990986, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Music by Karl Casey @ white bat audio
made by Mono & Vetinari
for Kenney Game Jam 2021"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
rect_scale = Vector2( 0.996727, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 806.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 804.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 804.0
margin_bottom = 32.0

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 323.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Start" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 327.0
margin_right = 477.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 481.0
margin_right = 804.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 804.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 99.0
margin_bottom = 26.0
text = "Volume:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 790.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -40.0
max_value = -2.0
step = 0.5
value = -3.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 794.0
margin_right = 804.0
margin_bottom = 26.0
rect_min_size = Vector2( 10, 10 )

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 804.0
margin_bottom = 94.0

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
margin_right = 323.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="HowToPlay" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
margin_left = 327.0
margin_right = 477.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 0 )
text = "How To Play"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
margin_left = 481.0
margin_right = 804.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 804.0
margin_bottom = 126.0

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_right = 323.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 327.0
margin_right = 477.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 0 )
text = "Quit"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 481.0
margin_right = 804.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 804.0
margin_bottom = 130.0

[node name="PopupPanel" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.0
margin_top = -38.8457
margin_right = 239.0
margin_bottom = 175.154
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 476.0
margin_bottom = 212.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
margin_right = 474.0
margin_bottom = 171.0
text = "Use WASD or Arrow keys to Move.
Use Space to Rotate your Cyberblades.
Rotate While SUrfing to Launch.
Pickups grant extra Time.
Time does not move while Surfing.
Go fast to Gain Score."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 175.0
margin_right = 474.0
margin_bottom = 203.0

[node name="Control" type="Control" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_right = 193.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Close" type="Button" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 277.0
margin_bottom = 28.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_left = 281.0
margin_right = 474.0
margin_bottom = 28.0
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Start" to="." method="_on_Start_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer4/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer3/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/HBoxContainer/Close" to="." method="_on_Close_pressed"]
